fix overflow issue on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@
 	background-color: #804dee;
 }
 
+#root {
+	overflow: hidden;
+}
+
 .hash-span {
 	margin-top: -50px;
 	padding-bottom: 50px;
